--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learn HTTP Course Project",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "node --no-warnings main.js",
     "test": "jest"
   },
   "author": "",
